Fix gap on front page on phone

--- a/docs/_sass/layouts/_index.scss
+++ b/docs/_sass/layouts/_index.scss
@@ -63,7 +63,7 @@
                 height: 350px;
             } //Smaller screen
             @media screen and (max-width: $break) {
-                height: 200px;
+                height: 120px;
             }
         }
 
